syntax = 'proto3';

package RMSession;

service RMSessionBroker {

  rpc RequestRMSession (DHInfo) returns (AckMessage);

}

message DHInfo {
  string dhId = 1;
  string dhIp = 2;
  int32 dhPort = 3;
}

message AckMessage {
  string result = 1;
  string rmSessionId = 2;
}
