syntax = 'proto3';

package RMSessionSyncModule;

service RMSessionSync {
  // [5]에 해당. 세션들 간 통신
  rpc SessionComm (PublishRefMap) returns (ACKMessage);

}

message Void {} // Response or Reply Message 내용이 필요 없을 때를 위한 메시지 타입 정의

// [5]에서 Publish 하는데 사용하는 메시지.
// 필수 내용: git diff 패치 파일, related 정보, 파일 경로
// Asset 단위로 보낸다.
message PublishRefMap {
  string transID = 1; // 트랜잭션 번호 {Timestamp} + {Datamap Filename} + 'SEND'
  // content - > json string. related, filepath
  string gitPatch = 2; // git_patch 파일
  string receiverId = 3;
  string operation = 4;
}

// ACK 메시지
message ACKMessage {
  string transID = 1; // 트랜잭션 번호 {Timestamp} + {Datamap Filename} + 'ACK'
  int32 result = 2; // 0은 Success, 1은 Failed ... 다양한 오류 값   검출 가능하게 해 보기
}